--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "each-series": "*",
     "glob": "^4.0.5",
     "image-size": "^0.3.2",
-    "node-sass": "2.0.1",
-    "spritesmith": "^0.19.2",
+    "node-sass": "^3.1.0",
+    "spritesmith": "^1.0.3",
     "utils-merge": "^1.0.0"
   },
   "devDependencies": {
