--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
     "frameworks/**"
   ],
   "dependencies": {
-    "datauri": "^0.5.5",
-    "each-series": "*",
-    "glob": "^4.0.5",
-    "image-size": "^0.3.2",
-    "node-sass": "^3.1.0",
-    "spritesmith": "^1.0.3",
-    "utils-merge": "^1.0.0"
+    "datauri": "1.0.5",
+    "each-series": "1.0.0",
+    "glob": "7.1.1",
+    "image-size": "0.5.1",
+    "node-sass": "4.5.0",
+    "spritesmith": "3.1.0",
+    "utils-merge": "1.0.0",
+    "pngsmith": "0.1.5",
+    "pixelsmith": "2.1.1"
   },
   "devDependencies": {
-    "blanket": "1.1.5",
-    "coveralls": "*",
-    "mocha": "^2.1.0",
-    "mocha-lcov-reporter": "*",
-    "should": "^4.4.1"
+    "blanket": "1.2.3",
+    "coveralls": "2.11.16",
+    "mocha": "3.2.0",
+    "mocha-lcov-reporter": "1.3.0",
+    "should": "11.2.0"
   },
   "scripts": {
     "test": "mocha",
