--- a/package.json
+++ b/package.json
@@ -20,17 +20,11 @@
     "pixelsmith": "2.1.1"
   },
   "devDependencies": {
-    "blanket": "1.2.3",
-    "coveralls": "2.11.16",
     "mocha": "3.2.0",
-    "mocha-lcov-reporter": "1.3.0",
     "should": "11.2.0"
   },
   "scripts": {
-    "test": "mocha",
-    "blanket": {
-      "pattern": "compass-node/lib"
-    }
+    "test": "mocha"
   },
   "author": "",
   "license": "MIT"
